syntax = "proto3";

package microservices.demo.client_orders;
option csharp_namespace = "Microservices.Demo.ClientOrders.Protos";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service OrdersGrpcService {
  rpc V1CreateOrder (V1CreateOrderRequest) returns (V1CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/client-orders/create/{customer_id}"
      body: "*"
    };
  }
  rpc V1QueryOrders (V1QueryOrdersRequest) returns (V1QueryOrdersResponse) {
      option (google.api.http) = {
      post: "/v1/client-orders/{customer_id}"
      body: "*"
    };
  }
}

message V1CreateOrderRequest {
  int64 customer_id = 1;
  repeated Item items = 2;

  message Item {
    string barcode = 1;
    int32 quantity = 2;
  }
}
message V1CreateOrderResponse {
}

message V1QueryOrdersRequest {
    int64 customer_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}
message V1QueryOrdersResponse {
    repeated OrderInfo order_info = 1;

    message OrderInfo {
        int64 order_id = 1;
        OrderStatus status = 2;
        google.protobuf.Timestamp created_at = 3;
    }
}

enum OrderStatus{
  ORDER_STATUS_UNDEFINED = 0;
  ORDER_STATUS_NEW = 1;
  ORDER_STATUS_CANCELED = 2;
  ORDER_STATUS_DELIVERED = 3;
}